[gd_scene load_steps=13 format=3 uid="uid://cfjqiqqt10fbn"]

[ext_resource type="PackedScene" uid="uid://cxrmmb0futad2" path="res://Scenes/player.tscn" id="1_08ioj"]
[ext_resource type="Script" path="res://Scripts/gameManager.gd" id="1_8rkey"]
[ext_resource type="PackedScene" uid="uid://dgur4xapxom3n" path="res://Scenes/takeable_character.tscn" id="2_gjfkg"]
[ext_resource type="FontFile" uid="uid://cti0mu4280iuj" path="res://fonts/PixelOperator8-Bold.ttf" id="2_uh63p"]
[ext_resource type="FontFile" uid="uid://cix58jk10u8o1" path="res://fonts/PixelOperator8.ttf" id="3_02g5t"]
[ext_resource type="Material" uid="uid://bdo6qj353f2ju" path="res://Assets/white.tres" id="3_66nam"]
[ext_resource type="PackedScene" uid="uid://bg6vvvetwrk5i" path="res://Scenes/Level Objects/floor.tscn" id="5_r7w46"]

[sub_resource type="BoxMesh" id="BoxMesh_jusfb"]
size = Vector3(1, 2, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_kygi2"]
size = Vector3(1, 2, 10)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dtxpq"]
sky_top_color = Color(0.0362574, 0.473621, 0.724044, 1)
sky_horizon_color = Color(0.981788, 0.982408, 0.98339, 1)
ground_bottom_color = Color(0.640139, 0.834305, 1, 1)
ground_horizon_color = Color(0.980392, 0.984314, 0.984314, 1)

[sub_resource type="Sky" id="Sky_uste6"]
sky_material = SubResource("ProceduralSkyMaterial_dtxpq")

[sub_resource type="Environment" id="Environment_qj6pq"]
background_mode = 2
background_color = Color(0.522011, 1, 0.911207, 1)
sky = SubResource("Sky_uste6")

[node name="Game" type="Node3D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_8rkey")

[node name="TimeLabel" type="Label" parent="GameManager"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.5
offset_right = 63.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Time left: -"

[node name="GameLabel" type="Label" parent="GameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -32.0
offset_right = 276.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uh63p")
theme_override_font_sizes/font_size = 64

[node name="InstructionLabel" type="Label" parent="GameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = 51.0
offset_right = 111.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_02g5t")

[node name="World" type="Node" parent="."]

[node name="Level" type="Node3D" parent="World"]

[node name="Wall" type="MeshInstance3D" parent="World/Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.01515, 0.304242, 7.51648)
material_override = ExtResource("3_66nam")
mesh = SubResource("BoxMesh_jusfb")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Level/Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Level/Wall/StaticBody3D"]
shape = SubResource("BoxShape3D_kygi2")

[node name="Wall2" type="MeshInstance3D" parent="World/Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.01515, 3.69496, 7.51648)
material_override = ExtResource("3_66nam")
mesh = SubResource("BoxMesh_jusfb")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Level/Wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Level/Wall2/StaticBody3D"]
shape = SubResource("BoxShape3D_kygi2")

[node name="Wall3" type="MeshInstance3D" parent="World/Level"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.5078, 0.304242, 2.45448)
material_override = ExtResource("3_66nam")
mesh = SubResource("BoxMesh_jusfb")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Level/Wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Level/Wall3/StaticBody3D"]
shape = SubResource("BoxShape3D_kygi2")

[node name="Wall4" type="MeshInstance3D" parent="World/Level"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.5078, 3.69496, 2.45448)
material_override = ExtResource("3_66nam")
mesh = SubResource("BoxMesh_jusfb")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="World/Level/Wall4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Level/Wall4/StaticBody3D"]
shape = SubResource("BoxShape3D_kygi2")

[node name="Floor5" parent="World/Level" instance=ExtResource("5_r7w46")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, -35)

[node name="Floor6" parent="World/Level" instance=ExtResource("5_r7w46")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 0)

[node name="Floor7" parent="World/Level" instance=ExtResource("5_r7w46")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Floor8" parent="World/Level" instance=ExtResource("5_r7w46")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -35)

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_qj6pq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.354569, 0.93503, 0, -0.93503, 0.354569, 0, 11.5265, 0)
shadow_enabled = true

[node name="TakeableCharacter" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.09023, 3.00531, -28.5117)

[node name="TakeableCharacter2" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.9917, 2.14118, -34.5291)

[node name="TakeableCharacter3" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42.806, 2.06355, -30.2952)

[node name="TakeableCharacter4" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.2392, 1.74986, 2.17635)

[node name="TakeableCharacter5" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53761, 6.62284, 2.42991)

[node name="TakeableCharacter6" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53761, 2.18296, -6.07728)

[node name="TakeableCharacter7" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.65192, 2.13162, 6.26281)

[node name="TakeableCharacter8" parent="World" instance=ExtResource("2_gjfkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.34141, 2.13162, 6.26281)

[node name="Player" parent="." instance=ExtResource("1_08ioj")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.708, 0)
takeable_scene = ExtResource("2_gjfkg")
